Version 7.0.0

- Added hyperlinks for Spin objects

Version 6.9.9

- Added .elf files to list of binary types

Version 6.9.2

- Fixed restore of compiler output font

Version 6.9.0

- Removed shell sample from menu

Version 6.7.1

- Fixed some proploader WiFi bugs

Version 6.5.4

- Switched flash programming on P2 to use new loadp2 -SPI command by default
- Updated shell sample to add rename command
- Updated loadp2 and proploader to fix 9P rename code


Version 6.5.0

- Shell sample works with Parallax flash file system ("/pfs")
- Updated blink_all_cogs sample with nicer delay

Version 6.4.0

- Tried to make search&replace a bit more robust

Version 6.3.0

- Added "Identify Serial Ports" item to "Special" menu
- Fixed shell sample to work correctly with various ramdisks,
including P2 Edge 32MB PSRAM, Ray's logic 4 bit PSRAM board, and
HyperRam

Version 6.2.1

- Applied some fixes for PropLoader from upstream and from @Wuerfel21

Version 6.2.0

- Added "no terminal" option

Version 6.1.0

- Added a basic kind of support for project files.

Version 6.0.0

- Changed the shell example to allow mounting of flash or SD
- Disabled warnings about bytecode

Version 5.9.24

- Added option to create zip archive

Version 5.9.22

- Make the built in terminal use the runtime character set encoding set specified in Options
- Expanded the ANSI control code support to include color and some effects

Version 5.9.20

- Added link to Ada's hyperlinked P2 documentation

Version 5.9.18

- Fixed some color issues in dark mode.

Version 5.9.15

- Modified file change code to check for external files change whenever we gain/lose focus
- Modified right click popup menu to only happen inside the editor pane
- Removed blinking quoted text highlighting in the editor

Version 5.9.12

- Added a few more examples

Version 5.9.10

- Added right-click popup cut/copy/paste menu to terminal windows
- Made "Auto Reload Files if changed externally" the default.

Version 5.9.9
