@@ -1,6 +1,7 @@
 Version 7.0.0
 
 - Added hyperlinks for Spin objects
+- Removed broken "Identify Serial Ports" function
 
 Version 6.9.9
 
